--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
+# 声纹识别API依赖包
+# Python 3.10+ required
+#
+# 安装方法:
+# 1. 先安装PyTorch CPU版本 (减少包体积):
+#    pip install torch==2.2.2+cpu torchaudio==2.2.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+# 2. 安装其他依赖:
+#    pip install -r requirements.txt
+
+# AI模型相关
 modelscope==1.13.0
 datasets==2.14.5
-numpy==1.23.5
-packaging==21.3
-addict==2.4.0
+pyarrow==11.0.0  # 固定版本，避免与datasets不兼容
 transformers==4.52.4
-torch==2.2.2
-sentencepiece==0.2.0
+
+# 数值计算
+numpy==1.23.5
+
+# 音频处理
+librosa==0.10.1
 soundfile==0.13.1
-torchaudio==2.2.2
-pyyaml==6.0.1
+torchaudio==2.2.2+cpu  # CPU版本，需要使用上面的命令安装
+
+# Web框架
 fastapi==0.110.2
 uvicorn==0.29.0
-PyMySQL==1.1.0
 python-multipart==0.0.9
-librosa==0.10.1
+
+# 工具库
+pyyaml==6.0.1
 loguru==0.7.2
+packaging==21.3
+addict==2.4.0
+sentencepiece==0.2.0
